--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,3 +59,39 @@
       @apply bg-background text-foreground;
     }
   }
+
+
+
+
+  .embla {
+  margin: auto;
+  --slide-height: 5rem;
+  --slide-spacing: 1rem;
+  --slide-size: 15%;
+}
+.embla__viewport {
+  overflow: hidden;
+}
+.embla__container {
+  backface-visibility: hidden;
+  display: flex;
+  touch-action: pan-y;
+  margin-left: calc(var(--slide-spacing) * -1);
+}
+.embla__slide {
+
+  flex: 0 0 var(--slide-size);
+  min-width: 0;
+  padding-left: var(--slide-spacing);
+}
+.embla__slide__number {
+  box-shadow: inset 0 0 0 0.2rem var(--detail-medium-contrast);
+  border-radius: 1.8rem;
+  font-size: 4rem;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: var(--slide-height);
+}
+
